# io-sum-test

./: .gitignore  start-local-ceph.sh  stop-local-ceph.sh
src/test/: CMakeLists.txt
src/test/io_sum/: CMakeLists.txt  test_io_sum.cc
